--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,11 @@
     "compilerOptions": {
         "target": "es5",
         "strict": true
-    }
+    },
+    "include": [
+        "**/*.ts"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
